--- a/packages/subfiglist/subfiglist.sty
+++ b/packages/subfiglist/subfiglist.sty
@@ -1,3 +1,23 @@
+%% subfiglist.sty
+%% Copyright 2017 Manuel Nutz
+%
+% This work may be distributed and/or modified under the
+% conditions of the LaTeX Project Public License, either version 1.3c
+% of this license or (at your option) any later version.
+% The latest version of this license is in
+%   http://www.latex-project.org/lppl.txt
+% and version 1.3c or later is part of all distributions of LaTeX
+% version 2008/05/04 or later.
+%
+% This work has the LPPL maintenance status `maintained'.
+% 
+% The Current Maintainer of this work is Manuel Nutz.
+%
+% This work consists of the files subfiglist.dtx and subfiglist.ins
+% and the derived file subfiglist.sty.
+%
+%
+%
 \NeedsTeXFormat{LaTeX2e}[1994/12/01]%
 \RequirePackage{expl3}[2015/12/20]% needs v6326 or newer
 \ProvidesExplPackage{subfiglist}{2015/03/22}{1.0}{labeled subfigures}
